--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     </head>
     <body>
         <div class="container">
+            <!--immagini-->
             <div class="slidebar">
-                <div class="slide">
-                    <img src="./img/01.webp" alt="1">
-                </div>
+                
             </div>
 
+            <!--pulsanti-->
             <div class="controls">
                 <div class="prev"><i class="fa-solid fa-arrow-down"></i></div>
                 <div class="next"><i class="fa-solid fa-arrow-up"></i></div>
